modifid animation and masthead

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
-    <<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i" rel="stylesheet" type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i" rel="stylesheet" type='text/css'>
 
     <!-- Custom styles for this template -->
     <link href="css/grayscale.min.css" rel="stylesheet">
@@ -57,9 +57,9 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">SAKERAKU</h1>
-              <p class="intro-text">Japanese Sake with Design and Kuramoto.
-                <br>Created by Sakeraku Project.</p>
-              <a href="#about" class="btn btn-circle js-scroll-trigger">
+              <!-- <p class="intro-text">Japanese Sake with Design and Kuramoto.
+                <br>Created by Sakeraku Project.</p> -->
+              <a href="#about" class="btn btn-circle-masthead js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
             </div>
@@ -78,10 +78,9 @@
               <br>Japanese Sake（酒）cultureand its excellence to friends aroung the world.
               <br>How we make it unique is applying design oriented mind and
               <br>technology to the creation of SAKERAKU products.
-              <br>We SAKERAKU is the group of the various kinds of creators
-              <br>who love Japanese Sake.
+              <br>We SAKERAKU is the group of the various kinds of creators who love Japanese Sake.
             </p>
-            <a href="#download" class="btn btn-circle js-scroll-trigger">
+            <a href="#download" class="btn btn-circle-about js-scroll-trigger">
               <i class="fa fa-angle-double-down animated"></i>
             </a>
           </div>
