modified css to adjust background

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">SAKERAKU INTERNATIONAL</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">THE SAKERAKU</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -73,11 +73,14 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About SAKERAKU ( 酒楽。) </h2>
+            <h2>About SAKERAKU <br>( 酒楽。) </h2>
             <p>SAKERAKU is the project aiming to introduce
-              <br>Japanese Sake（酒）cultureand its excellence to friends aroung the world.
-              <br>How we make it unique is applying design oriented mind and
-              <br>technology to the creation of SAKERAKU products.
+              <br>Japanese Sake（酒）culture and
+              <br>its excellence to friends aroung the world.
+              <br>How we make it unique is
+              <br>applying design mind as well as
+              <br>the technology to the creation of
+              <br>SAKERAKU products.
               <br>We SAKERAKU is the group of the various kinds of creators who love Japanese Sake.
             </p>
             <a href="#download" class="btn btn-circle-about js-scroll-trigger">
@@ -93,7 +96,7 @@
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h2>Download Explanatory Material</h2>
-          <p>You can download and know more about Sakeraku International.</p>
+          <p>Please download the document <br> and know more about The Sakeraku.</p>
           <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
         </div>
       </div>
@@ -106,7 +109,7 @@
           <div class="col-lg-8 mx-auto">
             <h2>Contact Us</h2>
             <p>Feel free Contact Us
-              on Instagram and get more information on your hands</p>
+              on Instagram and <br>get more information on your hands</p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
                 <a href="Instagram Accountのアドレスを" class="btn btn-social btn-lg">
