--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
           <div class="col-lg-8 mx-auto">
             <h2>Contact Us</h2>
             <p>Feel free Contact Us
-              on Instagram and <br>get more information on your hands</p>
+              on Instagram and <br>get the latest information on your hands</p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="Instagram Accountのアドレスを" class="btn btn-social btn-lg">
+                <a href="https://www.instagram.com/sakerakuint/" class="btn btn-social btn-lg">
                   <i class="fa fa-instagram fa-fw"></i>
                   <span class="network-name">Instagram</span>
                 </a>
