--- a/index.html
+++ b/index.html
@@ -51,59 +51,67 @@
     </nav>
 
     <!-- Intro Header -->
-    <header class="masthead">
+    <div class="masthead">
       <div class="intro-body">
         <div class="container">
           <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h1 class="brand-heading">SAKERAKU</h1>
-              <!-- <p class="intro-text">Japanese Sake with Design and Kuramoto.
-                <br>Created by Sakeraku Project.</p> -->
-              <a href="#about" class="btn btn-circle-masthead js-scroll-trigger">
-                <i class="fa fa-angle-double-down animated"></i>
-              </a>
+            <div class="col-lg-12 mx-auto">
+              <h1 class="brand-heading">WE <br>LOVE <br>SAKE</h1>
             </div>
           </div>
         </div>
       </div>
-    </header>
+    </div>
 
     <!-- About Section -->
-    <section id="about" class="content-section text-center">
-      <div class="container">
+    <section id="about" class="about-section">
+      <div class="container container-about">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>About SAKERAKU <br>( 酒楽。) </h2>
-            <p>SAKERAKU is the project aiming to introduce
-              <br>Japanese Sake（酒）culture and
-              <br>its excellence to friends aroung the world.
-              <br>How we make it unique is
-              <br>applying design mind as well as
-              <br>the technology to the creation of
-              <br>SAKERAKU products.
-              <br>We SAKERAKU is the group of the various kinds of creators who love Japanese Sake.
-            </p>
-            <a href="#download" class="btn btn-circle-about js-scroll-trigger">
-              <i class="fa fa-angle-double-down animated"></i>
-            </a>
+          <div class="col-lg-8">
+            <h2>About US</h2>
+              <h3>酒楽。</h3>
+              <div class='about-story' >
+                <p>SAKERAKU is the project aiming to introduce
+                  Japanese Sake（酒）culture and
+                  its excellence to friends aroung the world.
+                  How we make it unique is
+                  applying design mind as well as
+                  the technology to the creation of
+                  SAKERAKU products.
+                  We SAKERAKU is the group of the various kinds of creators who love Japanese Sake.
+                  SAKERAKU is the project aiming to introduce
+                    Japanese Sake（酒）culture and
+                    its excellence to friends aroung the world.
+                    How we make it unique is
+                    applying design mind as well as
+                    the technology to the creation of
+                    SAKERAKU products.
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-4 about-photo-frame">
+                <div class="photo">
+                  <img class="image-responsive" src="img/stocks/7X4A9495_vogue vision studio.jpg">
+                </div>
+              </div>
           </div>
-        </div>
       </div>
     </section>
 
     <!-- Download Section -->
-    <section id="download" class="download-section content-section text-center">
+    <section id="download" class="download-section">
       <div class="container">
-        <div class="col-lg-8 mx-auto">
-          <h2>Download Explanatory Material</h2>
-          <p>Please download the document <br> and know more about The Sakeraku.</p>
-          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+        <div class="col-lg-8">
+          <h2>Know More SAKERAKU</h2>
         </div>
+          <p>Please download the document and know more about The Sakeraku.</p>
+      <div class="col-lg-8 btn-download mx-auto">
+        <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
       </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="content-section text-center">
+    <section id="contact" class="contact-section text-center">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
@@ -112,9 +120,17 @@
               on Instagram and <br>get the latest information on your hands</p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
+                <a href="https://twitter.com/sakeraku_youiso" class="btn btn-social btn-lg">
+                  <i class="fa fa-twitter fa-fw"></i>
+                  <span class="network-name">Twitter</span>
+                </a>
                 <a href="https://www.instagram.com/sakerakuint/" class="btn btn-social btn-lg">
                   <i class="fa fa-instagram fa-fw"></i>
                   <span class="network-name">Instagram</span>
+                </a>
+                <a href="mailto:info@sakeraku.com" class="btn btn-social btn-lg">
+                  <i class="fa fa-envelope fa-fw"></i>
+                  <span class="network-name">Mail</span>
                 </a>
               </li>
             </ul>
@@ -125,7 +141,7 @@
 
     <!-- Map Section -->
     <!-- <div id="map"></div> -->
-
+    <hr>
     <!-- Footer -->
     <footer>
       <div class="container text-center">
