--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#special">Special</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#download">Download</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
+
           </ul>
         </div>
       </div>
@@ -98,6 +102,21 @@
       </div>
     </section>
 
+  <!-- Special Section -->
+      <section id="special" class="special-section mx-auto">
+
+        <div class="container special-container mx-auto">
+            <h2>What makes Sakeraku special</h2>
+            <div class="col-lg-3 col-md-12 special-item">
+            </div>
+            <div class="col-lg-3  col-md-12 special-item">
+            </div>
+            <div class="col-lg-3  col-md-12 special-item">
+            </div>
+            <div class="col-lg-3  col-md-12 special-item">
+            </div>
+        </div>
+      </section>
     <!-- Download Section -->
     <section id="download" class="download-section">
       <div class="container">
