--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i|Questrial" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i|Questrial" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/grayscale.min.css" rel="stylesheet">
 
@@ -95,12 +95,328 @@
             </div>
             <div class="col-lg-4 about-photo-frame">
                 <div class="photo">
-                  <img class="image-responsive" src="img/stocks/7X4A9495_vogue vision studio.jpg">
+                  <img class="image-responsive" src="../img/stocks/waza-tenryo.jpg">
                 </div>
               </div>
           </div>
       </div>
     </section>
+
+    <!-- Product Section -->
+        <section id="product" class="product-section mx-auto">
+            <div class="product-cover mx-auto">
+                <h2>SAKERAKU 'KURAMOTO' 2018</h2>
+                <div class="row mx-auto">
+                  <div class="col-lg-3 wrapper ">
+                    <div class="container">
+                      <div class="top-chiyogiku"></div>
+                      <div class="bottom">
+                        <div class="left">
+                          <div class="details">
+                            <h1>Chiyogiku</h1>
+                            <p>$250</p>
+                          </div>
+                          <div class="taste">
+                            <i class="material-icons">whatshot</i>
+                            <p>dry</p>
+                          </div>
+                        </div>
+                        <div class="right">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="inside">
+                      <div class="icon"><i class="material-icons">info_outline</i></div>
+                      <div class="contents">
+                        <table>
+                          <tr>
+                            <th>Width</th>
+                            <th>Height</th>
+                          </tr>
+                          <tr>
+                            <td>3000mm</td>
+                            <td>4000mm</td>
+                          </tr>
+                          <tr>
+                            <th>Something</th>
+                            <th>Something</th>
+                          </tr>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 wrapper ">
+                    <div class="container">
+                      <div class="top-yamada"></div>
+                      <div class="bottom">
+                        <div class="left">
+                          <div class="details">
+                            <h1>yamada</h1>
+                            <p>$250</p>
+                          </div>
+                          <div class="taste">
+                            <i class="material-icons">whatshot</i>
+                            <p>dry</p>
+                          </div>
+                        </div>
+                        <div class="right">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="inside">
+                      <div class="icon"><i class="material-icons">info_outline</i></div>
+                      <div class="contents">
+                        <table>
+                          <tr>
+                            <th>Width</th>
+                            <th>Height</th>
+                          </tr>
+                          <tr>
+                            <td>3000mm</td>
+                            <td>4000mm</td>
+                          </tr>
+                          <tr>
+                            <th>Something</th>
+                            <th>Something</th>
+                          </tr>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 wrapper ">
+                    <div class="container">
+                      <div class="top-tenryo"></div>
+                      <div class="bottom">
+                        <div class="left">
+                          <div class="details">
+                            <h1>tenryo</h1>
+                            <p>$250</p>
+                          </div>
+                          <div class="taste">
+                            <i class="material-icons">whatshot</i>
+                            <p>dry</p>
+                          </div>
+                        </div>
+                        <div class="right">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="inside">
+                      <div class="icon"><i class="material-icons">info_outline</i></div>
+                      <div class="contents">
+                        <table>
+                          <tr>
+                            <th>Width</th>
+                            <th>Height</th>
+                          </tr>
+                          <tr>
+                            <td>3000mm</td>
+                            <td>4000mm</td>
+                          </tr>
+                          <tr>
+                            <th>Something</th>
+                            <th>Something</th>
+                          </tr>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 wrapper ">
+                    <div class="container">
+                      <div class="top-iwamura"></div>
+                      <div class="bottom">
+                        <div class="left">
+                          <div class="details">
+                            <h1>iwamura</h1>
+                            <p>$250</p>
+                          </div>
+                          <div class="taste">
+                            <i class="material-icons">whatshot</i>
+                            <p>dry</p>
+                          </div>
+                        </div>
+                        <div class="right">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="inside">
+                      <div class="icon"><i class="material-icons">info_outline</i></div>
+                      <div class="contents">
+                        <table>
+                          <tr>
+                            <th>Width</th>
+                            <th>Height</th>
+                          </tr>
+                          <tr>
+                            <td>3000mm</td>
+                            <td>4000mm</td>
+                          </tr>
+                          <tr>
+                            <th>Something</th>
+                            <th>Something</th>
+                          </tr>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 wrapper ">
+                    <div class="container">
+                      <div class="top-komachi"></div>
+                      <div class="bottom">
+                        <div class="left">
+                          <div class="details">
+                            <h1>komachi</h1>
+                            <p>$250</p>
+                          </div>
+                          <div class="taste">
+                            <i class="material-icons">whatshot</i>
+                            <p>dry</p>
+                          </div>
+                        </div>
+                        <div class="right">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="inside">
+                      <div class="icon"><i class="material-icons">info_outline</i></div>
+                      <div class="contents">
+                        <table>
+                          <tr>
+                            <th>Width</th>
+                            <th>Height</th>
+                          </tr>
+                          <tr>
+                            <td>3000mm</td>
+                            <td>4000mm</td>
+                          </tr>
+                          <tr>
+                            <th>Something</th>
+                            <th>Something</th>
+                          </tr>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 wrapper ">
+                    <div class="container">
+                      <div class="top-hananomai"></div>
+                      <div class="bottom">
+                        <div class="left">
+                          <div class="details">
+                            <h1>hananomai</h1>
+                            <p>$250</p>
+                          </div>
+                          <div class="taste">
+                            <i class="material-icons">whatshot</i>
+                            <p>dry</p>
+                          </div>
+                        </div>
+                        <div class="right">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="inside">
+                      <div class="icon"><i class="material-icons">info_outline</i></div>
+                      <div class="contents">
+                        <table>
+                          <tr>
+                            <th>Width</th>
+                            <th>Height</th>
+                          </tr>
+                          <tr>
+                            <td>3000mm</td>
+                            <td>4000mm</td>
+                          </tr>
+                          <tr>
+                            <th>Something</th>
+                            <th>Something</th>
+                          </tr>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 wrapper ">
+                    <div class="container">
+                      <div class="top-chiyonogikuwaza"></div>
+                      <div class="bottom">
+                        <div class="left">
+                          <div class="details">
+                            <h1>Chiyogiku</h1>
+                            <p>$250</p>
+                          </div>
+                          <div class="taste">
+                            <i class="material-icons">whatshot</i>
+                            <p>dry</p>
+                          </div>
+                        </div>
+                        <div class="right">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="inside">
+                      <div class="icon"><i class="material-icons">info_outline</i></div>
+                      <div class="contents">
+                        <table>
+                          <tr>
+                            <th>Width</th>
+                            <th>Height</th>
+                          </tr>
+                          <tr>
+                            <td>3000mm</td>
+                            <td>4000mm</td>
+                          </tr>
+                          <tr>
+                            <th>Something</th>
+                            <th>Something</th>
+                          </tr>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 wrapper ">
+                    <div class="container">
+                      <div class="top-yamadawaza"></div>
+                      <div class="bottom">
+                        <div class="left">
+                          <div class="details">
+                            <h1>yamada</h1>
+                            <p>$250</p>
+                          </div>
+                          <div class="taste">
+                            <i class="material-icons">whatshot</i>
+                            <p>dry</p>
+                          </div>
+                        </div>
+                        <div class="right">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="inside">
+                      <div class="icon"><i class="material-icons">info_outline</i></div>
+                      <div class="contents">
+                        <table>
+                          <tr>
+                            <th>Width</th>
+                            <th>Height</th>
+                          </tr>
+                          <tr>
+                            <td>3000mm</td>
+                            <td>4000mm</td>
+                          </tr>
+                          <tr>
+                            <th>Something</th>
+                            <th>Something</th>
+                          </tr>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </section>
+
+
 
   <!-- Special Section -->
       <section id="special" class="special-section mx-auto">
@@ -125,7 +441,7 @@
         </div>
           <p>Please download the document and know more about The Sakeraku.</p>
       <div class="col-lg-8 btn-download mx-auto">
-        <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+        <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">PDF Download</a>
       </div>
     </section>
 
@@ -149,7 +465,7 @@
                 </a>
                 <a href="mailto:info@sakeraku.com" class="btn btn-social btn-lg">
                   <i class="fa fa-envelope fa-fw"></i>
-                  <span class="network-name">Mail</span>
+                  <span class="network-name">E-Mail</span>
                 </a>
               </li>
             </ul>
