--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#product">Product</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#special">Special</a>
             </li>
             <li class="nav-item">
