--- a/index.html
+++ b/index.html
@@ -1521,7 +1521,7 @@
     <script src="/components/formstone/dist/js/viewer.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/grayscale.js"></script>
+    <script src="js/grayscale.min.js"></script>
 
 
 
