--- a/index.html
+++ b/index.html
@@ -82,39 +82,8 @@
             <h2>About SAKERAKU</h2>
             <h3>酒楽。</h3>
             <div class='about-story' >
-              <p>SAKERAKU is the project aiming to introduce
-                Japanese Sakeculture and
-                its excellence to friends aroung the world.
-                How we make it unique is
-                applying design mind as well as
-                the technology to the creation of
-                SAKERAKU products.
-                We SAKERAKU is the group of the various kinds of creators who love Japanese Sake.
-                SAKERAKU is the project aiming to introduce
-                Japanese Sakeculture and
-                its excellence to friends aroung the world.
-                How we make it unique is
-                applying design mind as well as
-                the technology to the creation of
-                SAKERAKU products.
-                Japanese Sakeculture and
-                its excellence to friends aroung the world.
-                How we make it unique is
-                applying design mind as well as
-                the technology to the creation of
-                SAKERAKU products.
-                Japanese Sakeculture and
-                its excellence to friends aroung the world.
-                How we make it unique is
-                applying design mind as well as
-                the technology to the creation of
-                SAKERAKU products.
-                Japanese Sakeculture and
-                its excellence to friends aroung the world.
-                How we make it unique is
-                applying design mind as well as
-                the technology to the creation of
-                SAKERAKU products.
+              <p>The Sakeraku was founded by the group of Japanese creators who loves Japanese sake with the mission of expanding the excellence of Japanese sake to the world. Our founder Katsunori Watanabe also the CEO of Bauhaus.Inc (design office) deeply felt how Japanese sake has been undervalued despite the fact of steady efforts was made for years by brewers in the course of the creation and improvement of sake. He and the creators decided to found the Sakeraku to fill the gap lying between the potential of sake and how people at the time unfairly evaluating sake. Our mission is to give more people to enjoy Japanese sake with the quality and its origin and design power. We are co-working with Kuramoto(sake brewers) from the West to the East in Japan and have already produced more than 20 products under the Sakeraku brand.  They all are family managed old style Japanese sake brewers, carefully choose ingredients such as locally grown rice and Meisui that is pure fresh natural water resource at their location. All Sakeraku products are originally produced from the scratch to create unique taste, and exclusively sold by Sakeraku. As of this, every product of Sakeraku has limited supply.  We would like people outside of Japan to enjoy this limited Sakeraku experience therefore we decided to expand our operation to Asia first. This year we produced the latest lineup called ‘KURAMOTO’ that we made with Kuramoto located around Tokai area where known for excellent water resource from the alps.  We sincerely wish us to able to deliver this ‘KURAMOTO’ to you.
+
               </p>
             </div>
           </div>
@@ -125,6 +94,9 @@
               </div>
               <div class="col-lg-12 founder mx-auto">
                 <p>Founder: Katsunori Watanabe</p>
+              </div>
+              <div class="col-lg-12 profile mx-auto">
+                <p>Designer, Producer, SSI Sake curator</p>
               </div>
             </div>
           </div>
