updated special card and mastheadmini

--- a/index.html
+++ b/index.html
@@ -63,13 +63,20 @@
 
     <!-- Intro Header -->
     <div class="masthead">
-      <div class="intro-body">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12 mx-auto">
-              <h1 class="brand-heading">THE <br>SAKERAKU</h1>
+        <div class="intro-body">
+          <div class="container mx-auto">
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <h1 class="brand-heading">THE <br>SAKERAKU</h1>
+              </div>
             </div>
           </div>
+        </div>
+
+<!-- ビデオが出来たらdisplay:noneを外す -->
+      <div class="row btn-row">
+        <div class="btn col-lg-12 video-watch" style="display:none;">
+          <a href="" class="btn btn-video btn-lg">PLAY VIDEO</a>
         </div>
       </div>
     </div>
@@ -108,7 +115,7 @@
     <section id="product" class="product-section mx-auto">
       <div class="container">
         <div class="row">
-          <h2 class="header">SAKERAKU <br>"KURAMOTO" 2018</h2>
+          <h2 class="header">SAKERAKU <br>"KURAMOTO" #011-019</h2>
 
           <div class="container product-cover mx-auto">
 
@@ -1315,85 +1322,78 @@
         <div class="container special-container mx-auto">
           <div class="col-lg-12 special-about mx-auto">
               <p>As a Japanese sake producer, we have 'KODAWARI' to produce Sake.
-                <br>Our Sake master and curators carefully choose 3 factors +1(Design).</p>
+                <br>Our Sake master and curators carefully choose 3 factors +1.</p>
           </div>
-            <div class="col-lg-3  special-item">
-              <div class="container">
-                <div class="top">
-                  <h1>01.Meisui</h1>
-                  <p>Best Water For Sake</p>
+            <div class="special-item">
+                <div class="img-fit-cover">
+                  <img src="../img/water_tenryo.jpg" alt="">
                 </div>
-                <div class="body-meisui">
-                  <div class="photo">
-                    <!-- <div class="icon"><a href="#about"><i class="material-icons">play_circle_filled</i></a></div> -->
+                <div class="text-section-cover mx-auto text-center">
+                  <h1>Meisui</h1>
+                  <div class="subtitle text-center">
+                    <p>Natural Fresh Water</p>
                   </div>
-                </div>
-                <div class="bottom">
-                    <p>We Sakeraku carefully choose brewers that use pure fresh water from the nature in Japan.</p>
+                  <div class="description text-center">
+                    <p>Our brewers use local natural fresh water suitable for sake production that give sake a good quality</p>
+                  </div>
                 </div>
                 <div class="footer">
                   <p>kodawari 01</p>
                 </div>
-              </div>
             </div>
             <!-- ここまで -->
-            <div class="col-lg-3  special-item">
-              <div class="container">
-                <div class="top">
-                  <h1>02.Okome</h1>
-                  <p>Best Rice in Japan</p>
+            <div class="special-item">
+                <div class="img-fit-cover">
+                  <img src="../img/okome.jpg" alt="">
                 </div>
-                <div class="body-okome" >
-                  <div class="photo">
+                <div class="text-section-cover mx-auto text-center">
+                  <h1>Okome</h1>
+                  <div class="subtitle text-center">
+                    <p>Locally Grown Rice</p>
                   </div>
-                </div>
-                <div class="bottom">
-                    <p>We Sakeraku only use locally grown rice in Japan. preferrebly choose from the close producing district.</p>
+                  <div class="description text-center">
+                    <p>Our brewers use locally grown rice suitable for sake production that give sake a good quality</p>
+                  </div>
                 </div>
                 <div class="footer">
                   <p>kodawari 02</p>
                 </div>
-              </div>
             </div>
             <!-- ここまで -->
-            <div class="col-lg-3  special-item">
-              <div class="container">
-                <div class="top">
-                  <h1>03.Kuramoto</h1>
-                  <p>Great Brewers</p>
+            <div class="special-item">
+                <div class="img-fit-cover">
+                  <img src="../img/chiyogiku.jpg" alt="">
                 </div>
-                <div class="body-kuramoto">
-                  <div class="photo">
+                <div class="text-section-cover mx-auto text-center">
+                  <h1>Kuramoto</h1>
+                  <div class="subtitle text-center">
+                    <p>Historical Brewers</p>
                   </div>
-                </div>
-                <div class="bottom">
-                    <p>We Sakeraku are firmly tied up with brewers(kuramoto)
-                      with the mission of sharing the beauty of Japanese sake.</p>
+                  <div class="description text-center">
+                    <p>Our partner brewers 'Kuramoto' are famlily managed and having 100s years of history</p>
+                  </div>
                 </div>
                 <div class="footer">
                   <p>kodawari 03</p>
                 </div>
-              </div>
             </div>
             <!-- ここまで -->
-            <div class="col-lg-3  special-item">
-              <div class="container">
-                <div class="top">
-                  <h1>04.Design & Original</h1>
-                  <p>Exclusive</p>
+            <div class="special-item">
+                <div class="img-fit-cover">
+                  <img src="../img/stocks/design.jpg" alt="">
                 </div>
-                <div class="body-design">
-                  <div class="photo">
+                <div class="text-section-cover mx-auto text-center">
+                  <h1>Design</h1>
+                  <div class="subtitle text-center">
+                    <p>Sake as Entertainment</p>
                   </div>
-                </div>
-                <div class="bottom">
-                    <p>We Sakeraku provide good design for sake to enjoy more and
-                      all products by us are exclusive  with limited supply.</p>
+                  <div class="description text-center">
+                    <p>We provide good design that makes sake more enjoyable to be with as a group of creators</p>
+                  </div>
                 </div>
                 <div class="footer">
                   <p>kodawari 04</p>
                 </div>
-              </div>
             </div>
             <!-- ここまで -->
 
@@ -1413,7 +1413,7 @@
         <div class="container message mx-auto">
           <div class="row">
           <div class="col-lg-12">
-              <p>Please download the introductory document about the Sakeraku.</p>
+              <p>Please download our project introducing paper.</p>
           </div>
           <div class="col-lg-12 pdf-image-frame">
             <div class="pdf-image">
@@ -1421,7 +1421,7 @@
             </div>
           </div>
             <div class="col-lg-12 btn-download mx-auto">
-              <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">PDF Download</a>
+              <a href="" class="btn btn-default btn-lg">PDF Download</a>
             </div>
         </div>
         </div>
@@ -1435,7 +1435,7 @@
         <div class="row">
               <h2>Contact Us <br>& Social</h2>
               <div class="col-lg-12 contact-message">
-                  <p>Follow Us and Message Us.</p>
+                  <p>Please Follow Us & Contact Us.</p>
               </div>
           </div>
           <div class="col-lg-8 mx-auto">
