--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h2>About SAKERAKU</h2>
             <h3>酒楽。</h3>
             <div class='about-story' >
-              <p>The Sakeraku was founded by the group of Japanese creators who loves Japanese sake with the mission of expanding the excellence of Japanese sake to the world. Our founder Katsunori Watanabe also the CEO of Bauhaus.Inc (design office) deeply felt how Japanese sake has been undervalued despite the fact of steady efforts was made for years by brewers in the course of the creation and improvement of sake. He and the creators decided to found the Sakeraku to fill the gap lying between the potential of sake and how people at the time unfairly evaluating sake. Our mission is to give more people to enjoy Japanese sake with the quality and its origin and design power. We are co-working with Kuramoto(sake brewers) from the West to the East in Japan and have already produced more than 20 products under the Sakeraku brand.  They all are family managed old style Japanese sake brewers, carefully choose ingredients such as locally grown rice and Meisui that is pure fresh natural water resource at their location. All Sakeraku products are originally produced from the scratch to create unique taste, and exclusively sold by Sakeraku. As of this, every product of Sakeraku has limited supply.  We would like people outside of Japan to enjoy this limited Sakeraku experience therefore we decided to expand our operation to Asia first. This year we produced the latest lineup called ‘KURAMOTO’ that we made with Kuramoto located around Tokai area where known for excellent water resource from the alps.  We sincerely wish us to able to deliver this ‘KURAMOTO’ to you.
+              <p>The Sakeraku was founded by the group of Japanese creators who love Japanese sake with the mission of expanding the excellence of Japanese sake to the world. Our founder Katsunori Watanabe also the CEO of Bauhaus.Inc (design office) deeply felt how Japanese sake has been undervalued despite the fact of steady efforts was made for years by brewers in the course of the creation and improvement of sake. He and the creators decided to found the Sakeraku to fill the gap lying between the potential of sake and how people at the time unfairly evaluating sake. Our mission is to give more people to enjoy Japanese sake with the quality and its origin and design power. We are co-working with Kuramoto(sake brewers) from the West to the East in Japan and have already produced more than 20 products under the Sakeraku brand.  They all are family managed old style Japanese sake brewers, carefully choose ingredients such as locally grown rice and Meisui that is pure fresh natural water resource at their location. All Sakeraku products are originally produced from the scratch to create unique taste, and exclusively sold by Sakeraku. As of this, every product of Sakeraku has limited supply.  We would like people outside of Japan to enjoy this limited Sakeraku experience therefore we decided to expand our operation to Asia first. This year we produced the latest lineup called ‘KURAMOTO’ that we made with Kuramoto located around Tokai area where known for excellent water resource from the alps.  We sincerely wish us to able to deliver this ‘KURAMOTO’ to you.
 
               </p>
             </div>
@@ -97,7 +97,7 @@
           <div class="col-lg-4 about-photo-frame">
             <div class="row">
               <div class="col-lg-12 photo mx-auto">
-                <img class="image-responsive" src="../img/katsunoriwatanabebw.jpg">
+                <img class="image-responsive" src="../img/compressed/katsunoriwatanabebw-min.jpg">
               </div>
               <div class="col-lg-12 founder mx-auto">
                 <p>Founder: Katsunori Watanabe</p>
@@ -1321,12 +1321,12 @@
             <h2 class="header">Our Special <br>= Kodawari</h2>
         <div class="container special-container mx-auto">
           <div class="col-lg-12 special-about mx-auto">
-              <p>As a Japanese sake producer, we have 'KODAWARI' to produce Sake.
+              <p>We have 'KODAWARI' to produce Sake.
                 <br>Our Sake master and curators carefully choose 3 factors +1.</p>
           </div>
             <div class="special-item">
                 <div class="img-fit-cover">
-                  <img src="../img/water_tenryo.jpg" alt="">
+                  <img src="../img/compressed/water_tenryo-min.jpg" alt="">
                 </div>
                 <div class="text-section-cover mx-auto text-center">
                   <h1>Meisui</h1>
@@ -1344,7 +1344,7 @@
             <!-- ここまで -->
             <div class="special-item">
                 <div class="img-fit-cover">
-                  <img src="../img/okome.jpg" alt="">
+                  <img src="../img/compressed/okome-min.jpg" alt="">
                 </div>
                 <div class="text-section-cover mx-auto text-center">
                   <h1>Okome</h1>
@@ -1362,7 +1362,7 @@
             <!-- ここまで -->
             <div class="special-item">
                 <div class="img-fit-cover">
-                  <img src="../img/chiyogiku.jpg" alt="">
+                  <img src="../img/compressed/chiyogiku-min.jpg" alt="">
                 </div>
                 <div class="text-section-cover mx-auto text-center">
                   <h1>Kuramoto</h1>
@@ -1380,7 +1380,7 @@
             <!-- ここまで -->
             <div class="special-item">
                 <div class="img-fit-cover">
-                  <img src="../img/stocks/design.jpg" alt="">
+                  <img src="../img/compressed/design-min.jpg" alt="">
                 </div>
                 <div class="text-section-cover mx-auto text-center">
                   <h1>Design</h1>
@@ -1417,7 +1417,7 @@
           </div>
           <div class="col-lg-12 pdf-image-frame">
             <div class="pdf-image">
-              <img src="../img/pdf-preview.png" alt="">
+              <img src="../img/compressed/pdf-preview-min.png" alt="">
             </div>
           </div>
             <div class="col-lg-12 btn-download mx-auto">
@@ -1481,9 +1481,6 @@
 
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script> -->
 
     <!--Custom JS-->
     <script src="/components/formstone/dist/js/core.js"></script>
