--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
 
   <head>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108864827-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-108864827-1');
+    </script>
+
+
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="We 'the Sakeraku' produce original Japanese sake and share its excellence to the world.
+          Our latest series 'KURAMOTO' has 'waza' that is sparkling sake wine and 'yawara' that is the master of sourness.
+          All products are produced from the scratch and exclusive by the Sakeraku.">
+    <meta name="author" content="@toko926">
 
-    <title>The Sakeraku</title>
+    <title>The Sakeraku JP Sake </title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +37,27 @@
     <link href="css/grayscale.min.css" rel="stylesheet">
     <link href="/components/formstone/dist/css/lightbox.css" rel="stylesheet">
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
+    <!-- facebook tag-->
+    <meta property="og:site_name" content="The Sakeraku" />
+    <meta property="og:title" content="The Sakeraku JP Sake" />
+    <meta property="og:type" content="top" />
+    <meta property="og:url" content="sakeraku.com" />
+    <meta property="og:image" content="img/compressed/thumbnail.min.jpg" />
+    <meta property="fb:app_id" content="sakeraku.com" />
+    <meta property="og:description" content="We 'the Sakeraku' produce original Japanese sake and share its excellence to the world.
+          Our latest series 'KURAMOTO' has 'waza' that is sparkling sake wine and 'yawara' that is the master of sourness.
+          All products are produced from the scratch and exclusive by the Sakeraku."/>
+    <meta property="og:locale" content="en_us" />
+
+    <!-- twitter tag -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@sakerakuint" />
+    <meta name="twitter:description" content="We 'the Sakeraku' produce original Japanese sake and share its excellence to the world." />
+    <meta name="twitter:image:src" content="img/compressed/thumbnail.min.jpg" />
 
 
   </head>
