--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <link href="/components/formstone/dist/css/lightbox.css" rel="stylesheet">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico">
+
 
     <!-- facebook tag-->
     <meta property="og:site_name" content="The Sakeraku" />
