--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link href="/components/formstone/dist/css/lightbox.css" rel="stylesheet">
 
     <!-- favicon -->
-    <link rel="icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="img/favicon.ico" />
 
 
     <!-- facebook tag-->
