--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html lang="en">
 
   <head>
-    <script src="https://use.typekit.net/qzn0mxy.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
+    <script>
+    (function(d) {
+      var config = {
+        kitId: 'qzn0mxy',
+        scriptTimeout: 3000,
+        async: true
+      },
+      h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+    })(document);
+  </script>
     <!-- favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" />
 
@@ -20,13 +28,13 @@
 
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="We 'the Sakeraku' produce original Japanese sake and share its excellence to the world.
           Our latest series 'KURAMOTO' has 'waza' that is sparkling sake wine and 'yawara' that is the master of sourness.
           All products are produced from the scratch and exclusive by the Sakeraku.">
     <meta name="author" content="@toko926">
 
-    <title>The Sakeraku JP Sake </title>
+    <title>The Sakeraku | JP Sake </title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
