--- a/index.html
+++ b/index.html
@@ -1465,7 +1465,7 @@
             </div>
           </div>
             <div class="col-lg-12 btn-download mx-auto">
-              <a href="" class="btn btn-default btn-lg">PDF Download</a>
+              <a href="https://goo.gl/frWHZe" class="btn btn-default btn-lg">PDF Download</a>
             </div>
         </div>
         </div>
@@ -1485,9 +1485,9 @@
           <div class="col-lg-8 mx-auto">
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="https://twitter.com/sakeraku_youiso" class="btn btn-social btn-lg">
-                  <i class="fa fa-twitter fa-fw"></i>
-                  <span class="network-name">Twitter</span>
+                <a href="https://facebook.com/sakerakuint/" class="btn btn-social btn-lg">
+                  <i class="fa fa-facebook fa-fw"></i>
+                  <span class="network-name">Facebook</span>
                 </a>
                 <a href="https://www.instagram.com/sakerakuint/" class="btn btn-social btn-lg">
                   <i class="fa fa-instagram fa-fw"></i>
