--- a/index.html
+++ b/index.html
@@ -1489,7 +1489,7 @@
                   <i class="fa fa-facebook fa-fw"></i>
                   <span class="network-name">Facebook</span>
                 </a>
-                <a href="https://www.instagram.com/sakerakuint/" class="btn btn-social btn-lg">
+                <a href="https://www.instagram.com/thesakeraku/" class="btn btn-social btn-lg">
                   <i class="fa fa-instagram fa-fw"></i>
                   <span class="network-name">Instagram</span>
                 </a>
