--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           All products are produced from the scratch and exclusive by the Sakeraku.">
     <meta name="author" content="@toko926">
 
-    <title>The Sakeraku | JP Sake </title>
+    <title>the Sakeraku | JP Sake </title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -117,10 +117,10 @@
           </div>
         </div>
 
-<!-- ビデオが出来たらdisplay:noneを外す -->
+<!-- ビデオが出来たらstyle="display:none"を外す -->
       <div class="row btn-row">
-        <div class="btn col-lg-12 video-watch" style="display:none;">
-          <a href="" class="btn btn-video btn-lg">PLAY VIDEO</a>
+        <div class="btn col-lg-12 video-watch">
+          <a href="https://www.sakeraku.shop" class="btn btn-video btn-lg">Buy Now on Shopify</a>
         </div>
       </div>
     </div>
@@ -165,8 +165,8 @@
 
             <div class="row mx-auto">
               <div class="col-lg-12 product-about mx-auto">
-                  <p>kuramoto Series are produced by Sakeraku and brewers located in Tokai area in Japan.
-                    <br>Every sake is limited and exclusive. Check the specification by clicking right conner.</p>
+                  <p>kuramoto Series are produced by the Sakeraku and brewers located in Tokai area in Japan.
+                    <br>All limited and exclusive. Check the specification by clicking right conner.</p>
               </div>
 
               <!-- ココカラ -->
@@ -1512,6 +1512,7 @@
       <div class="container text-center">
         <p>Copyright &copy; Sakeraku International 2017</p>
       </div>
+
     </footer>
 
     <!-- Bootstrap core JavaScript -->
