--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
           </div>
         </div>
 
-<!-- ビデオが出来たらstyle="display:none"を外す -->
+<!-- SHOPが出来たらstyle="display:none"を外す -->
       <div class="row btn-row">
         <div class="btn col-lg-12 video-watch">
-          <a href="https://www.sakeraku.shop" class="btn btn-video btn-lg">Buy Now on Shopify</a>
+          <a href="https://www.sakeraku.shop" class="btn btn-video btn-lg">Buy Now</a>
         </div>
       </div>
     </div>
@@ -171,7 +171,7 @@
 
               <!-- ココカラ -->
 
-              <div class="wrapper">
+              <div class="wrapper" href="https://www.sakeraku.shop/collections/top-sales/products/013_waza_tenryo-12bottles-package">
                 <div class="container">
                   <div class="top-chiyonogikuwaza"></div>
                   <div class="bottom">
@@ -1465,7 +1465,7 @@
             </div>
           </div>
             <div class="col-lg-12 btn-download mx-auto">
-              <a href="https://goo.gl/frWHZe" class="btn btn-default btn-lg">PDF Download</a>
+              <a href="https://drive.google.com/open?id=1hKLI7sd2TMgCcotqEx6MVVfWC8byqIy3" class="btn btn-default btn-lg">PDF Download</a>
             </div>
         </div>
         </div>
