--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           All products are produced from the scratch and exclusive by the Sakeraku.">
     <meta name="author" content="@toko926">
 
-    <title>the Sakeraku | JP Sake </title>
+    <title>the Sakeraku. | JP Sake </title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
